# s21_math

./: CMakeLists.txt  Makefile  README.md  README.ru.md  README_RU.md  main.c  main.h  math_tests.h  report.functions.html  report.html  report.s21_abs.c.58ffa0027f4af1d1bfbe2e5686f448df.html  report.s21_acos.c.eca8214e675b8c86d73bc1005ec38c57.html  report.s21_asin.c.16088356a80037be6b855e8d8083b7c5.html  report.s21_atan.c.a72739f80e538a84199b36eaa4dfd32d.html  report.s21_ceil.c.6c36e6b46032b045da128200448d665e.html  report.s21_cos.c.6e3b9dd14471916120d6d5e6f09b19a7.html  report.s21_exp.c.2e2c434e345336c3484318dddc81d775.html  report.s21_fabs.c.bdfc6de80b8280dd316bda7ab37ce62c.html  report.s21_floor.c.b85372d6104f33015bc932c4563bca5f.html  report.s21_fmod.c.e0617d4bf514f57a043f0e756ecf1be3.html  report.s21_log.c.e9d7368f11c9cef31d77e2313ad2d616.html  report.s21_pow.c.3a64d0839d153ba15f04d5659f3f3be5.html  report.s21_sin.c.04395d89f96898cf0961619f293f5b71.html  report.s21_sqrt.c.8cd1b8e1b5bafddf5c67501bd1336ee3.html  report.s21_tan.c.6fb2ece9000da8479fa9818b8dab7386.html  report.support_functions.c.5b3a91e28dce78e4e7199afbda6a36ff.html  s21_abs.c  s21_abs.c.gcov  s21_acos.c  s21_acos.c.gcov  s21_asin.c  s21_asin.c.gcov  s21_atan.c  s21_atan.c.gcov  s21_ceil.c  s21_ceil.c.gcov  s21_cos.c  s21_cos.c.gcov  s21_exp.c  s21_exp.c.gcov  (+69 more)
src/: Makefile
src/functions/: s21_abs.c  s21_acos.c  s21_asin.c  s21_atan.c  s21_ceil.c  s21_cos.c  s21_exp.c  s21_fabs.c  s21_floor.c  s21_fmod.c  s21_log.c  s21_pow.c  s21_sin.c  s21_sqrt.c  s21_tan.c  support_functions.c  work_main.c
(+18 files in other folders)
